--- a/libs/components/src/lib/components/dropdowns/multi-select/input-multi-select.component.html
+++ b/libs/components/src/lib/components/dropdowns/multi-select/input-multi-select.component.html
@@ -32,7 +32,7 @@
       [style.--prizm-data-list-border]="0"
     >
       <div class="list-search-item" *ngIf="searchable">
-        <prizm-input-layout size="m" label="Поиск">
+        <prizm-input-layout [label]="searchLabelTranslation$ | async" size="m">
           <input
             class="input-search"
             #input
