--- a/libs/components/src/lib/components/dropdowns/select/input-select.component.html
+++ b/libs/components/src/lib/components/dropdowns/select/input-select.component.html
@@ -105,7 +105,7 @@
         [style.--prizm-data-list-border]="0"
       >
         <div class="list-search-item" *ngIf="searchable">
-          <prizm-input-layout size="m" label="Поиск">
+          <prizm-input-layout [label]="searchLabelTranslation$ | async">
             <input
               class="input-search"
               [ngModel]="printing$.value"
