fix: dropdown select panel example fix #1283

--- a/apps/doc/src/app/components/dropdowns/dropdown-host/examples/select-panel-example/select-panel-example.component.html
+++ b/apps/doc/src/app/components/dropdowns/dropdown-host/examples/select-panel-example/select-panel-example.component.html
@@ -45,7 +45,7 @@
         <li class="options__item option" *ngFor="let option of filteredData">
           <prizm-checkbox class="option__checkbox" [(ngModel)]="option.checked">
             <div class="option__label">
-              <span class="option__title">{{ option.label.title }}</span>
+              <prizm-chips-item [deletable]="false">{{ option.label.title }}</prizm-chips-item>
               <span class="option__subtitle">{{ option.label.subtitle }}</span>
             </div>
           </prizm-checkbox>
