--- a/apps/doc/src/app/components/panel/examples/panel-example-with-instruments-simple/panel-example-with-instruments-simple.component.less
+++ b/apps/doc/src/app/components/panel/examples/panel-example-with-instruments-simple/panel-example-with-instruments-simple.component.less
@@ -11,18 +11,20 @@
     .instruments {
       display: flex;
       align-items: center;
+      gap: 8px;
 
       &__group {
         min-height: 24px;
-        padding: 0 15px;
 
         display: flex;
-        gap: 10px;
+        gap: 12px;
+        padding-left: 8px;
 
-        border-right: 1px solid var(--prizm-background-stroke);
+        border-left: 1px solid var(--prizm-background-stroke);
 
-        &:last-child {
+        &:first-child {
           border: none;
+          padding-left: 0;
         }
       }
     }
