--- a/apps/doc/src/app/components/icons/base/icons.component.html
+++ b/apps/doc/src/app/components/icons/base/icons.component.html
@@ -21,7 +21,7 @@
 
       <div class="icons">
         <div class="icon-def" *ngFor="let name of def.data" (click)="copy(name)">
-          <prizm-icons-svg [size]="24" [name]="name"></prizm-icons-svg>
+          <!--          <prizm-icons-svg [size]="24" [name]="name"></prizm-icons-svg>-->
           <div class="name" [title]="name">{{ name }}</div>
         </div>
       </div>
@@ -30,13 +30,13 @@
 
   <ng-template prizmDocPageTab prizmDocHost>
     <prizm-doc-demo>
-      <prizm-icons-svg
-        #element
-        [prizmDocHostElement]="element"
-        [name]="name"
-        [color]="color"
-        [size]="size"
-      ></prizm-icons-svg>
+      <!--      <prizm-icons-svg-->
+      <!--        #element-->
+      <!--        [prizmDocHostElement]="element"-->
+      <!--        [name]="name"-->
+      <!--        [color]="color"-->
+      <!--        [size]="size"-->
+      <!--      ></prizm-icons-svg>-->
     </prizm-doc-demo>
     <prizm-doc-documentation>
       <ng-template
