--- a/apps/doc/src/app/components/icons/base/icons.component.less
+++ b/apps/doc/src/app/components/icons/base/icons.component.less
@@ -50,3 +50,8 @@ h4 {
 .name {
   color: var(--prizm-text-icon-secondary);
 }
+
+prizm-icons,
+prizm-icons-16 {
+  border: 1px solid rgb(0 0 0 / 10%);
+}
