feat: change names to full

--- a/apps/doc/src/app/components/icons/base/examples/lazy/icons-lazy-example.component.html
+++ b/apps/doc/src/app/components/icons/base/examples/lazy/icons-lazy-example.component.html
@@ -10,12 +10,12 @@
 </div>
 
 <div>
-  <h4>16 size variants</h4>
+  <h4>Full size variants</h4>
 
   <div style="display: flex; gap: 8px">
-    <prizm-icons-16 [size]="30" [color]="'green'" name="wifi"></prizm-icons-16>
-    <prizm-icons-16 [size]="30" [color]="'var(--prizm-index-plan)'" name="agenda_fill"></prizm-icons-16>
-    <prizm-icons-16 class="color_by_class" [size]="30" name="key"></prizm-icons-16>
-    <prizm-icons-16 [size]="30" name="wrench"></prizm-icons-16>
+    <prizm-icons-full [size]="30" [color]="'green'" name="wifi"></prizm-icons-full>
+    <prizm-icons-full [size]="30" [color]="'var(--prizm-index-plan)'" name="agenda_fill"></prizm-icons-full>
+    <prizm-icons-full class="color_by_class" [size]="30" name="key"></prizm-icons-full>
+    <prizm-icons-full [size]="30" name="wrench"></prizm-icons-full>
   </div>
 </div>
