--- a/apps/doc/src/app/components/icons/base/icons.component.html
+++ b/apps/doc/src/app/components/icons/base/icons.component.html
@@ -43,15 +43,15 @@
         </div>
 
         <div>
-          <h1>16 size</h1>
+          <h1>Full size</h1>
           <div>
-            <prizm-icons-16
+            <prizm-icons-full
               #element
               [prizmDocHostElement]="element"
               [name]="name"
               [color]="color"
               [size]="size"
-            ></prizm-icons-16>
+            ></prizm-icons-full>
           </div>
         </div>
       </div>
