--- a/apps/doc/src/app/components/icons/base/examples/base/icons-base-example.component.html
+++ b/apps/doc/src/app/components/icons/base/examples/base/icons-base-example.component.html
@@ -11,12 +11,12 @@
 
 <!--    TODO: 4.0.0 rc.2 add different exports with same names -->
 <!--<div>-->
-<!--  <h4>16 size variants</h4>-->
+<!--  <h4>Full size variants</h4>-->
 
 <!--  <div style="display: flex; gap: 8px">-->
-<!--    <prizm-icons-16 [size]="30" [color]="'green'" name="wifi"></prizm-icons-16>-->
-<!--    <prizm-icons-16 [size]="30" [color]="'var(&#45;&#45;prizm-index-plan)'" name="agenda_fill"></prizm-icons-16>-->
-<!--    <prizm-icons-16 class="color_by_class" [size]="30" name="key"></prizm-icons-16>-->
-<!--    <prizm-icons-16 [size]="30" name="wrench"></prizm-icons-16>-->
+<!--    <prizm-icons-full [size]="30" [color]="'green'" name="wifi"></prizm-icons-full>-->
+<!--    <prizm-icons-full [size]="30" [color]="'var(&#45;&#45;prizm-index-plan)'" name="agenda_fill"></prizm-icons-full>-->
+<!--    <prizm-icons-full class="color_by_class" [size]="30" name="key"></prizm-icons-full>-->
+<!--    <prizm-icons-full [size]="30" name="wrench"></prizm-icons-full>-->
 <!--  </div>-->
 <!--</div>-->
