feat: change names to full

--- a/apps/doc/src/app/components/icons/base/examples/base/icons-base-example.component.html
+++ b/apps/doc/src/app/components/icons/base/examples/base/icons-base-example.component.html
@@ -1,5 +1,5 @@
 <div>
-  <h4>Base size variants</h4>
+  <h4>Base size</h4>
 
   <div style="display: flex; gap: 8px">
     <prizm-icons [size]="30" [color]="'green'" name="arrow_up"></prizm-icons>
@@ -11,7 +11,7 @@
 
 <!--    TODO: 4.0.0 rc.2 add different exports with same names -->
 <!--<div>-->
-<!--  <h4>Full size variants</h4>-->
+<!--  <h4>Full size </h4>-->
 
 <!--  <div style="display: flex; gap: 8px">-->
 <!--    <prizm-icons-full [size]="30" [color]="'green'" name="wifi"></prizm-icons-full>-->
