--- a/apps/doc/src/app/components/icons/base/examples/lazy/icons-lazy-example.component.html
+++ b/apps/doc/src/app/components/icons/base/examples/lazy/icons-lazy-example.component.html
@@ -1,5 +1,5 @@
 <div>
-  <h4>Base size variants</h4>
+  <h4>Base size</h4>
 
   <div style="display: flex; gap: 8px">
     <prizm-icons [size]="30" [color]="'green'" name="wifi"></prizm-icons>
@@ -10,7 +10,7 @@
 </div>
 
 <div>
-  <h4>Full size variants</h4>
+  <h4>Full size</h4>
 
   <div style="display: flex; gap: 8px">
     <prizm-icons-full [size]="30" [color]="'green'" name="wifi"></prizm-icons-full>
