--- a/apps/doc/src/app/components/icons/base/icons.component.html
+++ b/apps/doc/src/app/components/icons/base/icons.component.html
@@ -20,8 +20,8 @@
       <div class="icons">
         <div class="icon-def" *ngFor="let name of iconsSet" (click)="copy(name)">
           <div class="both-size">
-            <prizm-icons title="Base Size" [size]="24" [name]="name"></prizm-icons>
-            <prizm-icons-full title="Full Size" [size]="24" [name]="name"></prizm-icons-full>
+            <prizm-icons [size]="24" [name]="name" title="Base Size"></prizm-icons>
+            <prizm-icons-full [size]="24" [name]="name" title="Full Size"></prizm-icons-full>
           </div>
           <div class="name" [title]="name">{{ name }}</div>
         </div>
