--- a/apps/doc/src/app/components/icons/base/examples/base/icons-base-example.component.html
+++ b/apps/doc/src/app/components/icons/base/examples/base/icons-base-example.component.html
@@ -1,5 +1,5 @@
 <div>
-  <h4>Base size</h4>
+  <h4>SVG: Base size</h4>
 
   <div style="display: flex; gap: 8px">
     <prizm-icons [size]="30" [color]="'green'" name="arrow_up"></prizm-icons>
@@ -10,12 +10,45 @@
 </div>
 
 <div>
-  <h4>Full size</h4>
+  <h4>SVG: Full size</h4>
 
   <div style="display: flex; gap: 8px">
     <prizm-icons-full [size]="30" [color]="'green'" name="arrow_up"></prizm-icons-full>
     <prizm-icons-full [color]="'var(--prizm-index-plan)'" [size]="30" name="arrows_cross"></prizm-icons-full>
     <prizm-icons-full class="color_by_class" [size]="30" name="bag"></prizm-icons-full>
     <prizm-icons-full [size]="30" name="bubble_message"></prizm-icons-full>
+  </div>
+</div>
+
+<div>
+  <h4>Font: Base size</h4>
+
+  <div style="display: flex; gap: 8px">
+    <i class="base-icon prizm-base-icons-{{ prizmIconsNameToClass('arrow_up') }}" style="color: green"> </i>
+    <i
+      class="base-icon prizm-base-icons-{{ prizmIconsNameToClass('arrows_cross') }}"
+      style="color: var(--prizm-index-plan)"
+    >
+    </i>
+    <i class="color_by_class base-icon prizm-base-icons-bag"> </i>
+    <i class="base-icon prizm-base-icons-{{ prizmIconsNameToClass('bubble_message') }}"> </i>
+  </div>
+</div>
+
+<div>
+  <h4>Font: Full size</h4>
+
+  <div style="display: flex; gap: 8px">
+    <i class="base-icon prizm-full-icons-{{ prizmIconsNameToClass('arrow_up') }}" style="color: green"> </i>
+
+    <i
+      class="base-icon prizm-full-icons-{{ prizmIconsNameToClass('arrows_cross') }}"
+      style="color: var(--prizm-index-plan)"
+    >
+    </i>
+
+    <i class="color_by_class base-icon prizm-full-icons-bag"> </i>
+
+    <i class="base-icon prizm-full-icons-{{ prizmIconsNameToClass('bubble_message') }}"> </i>
   </div>
 </div>
