--- a/apps/doc/src/app/components/icons/base/examples/base/icons-base-example.component.less
+++ b/apps/doc/src/app/components/icons/base/examples/base/icons-base-example.component.less
@@ -1,8 +1,20 @@
 prizm-icons,
-prizm-icons-full {
+prizm-icons-full,
+.base-icon,
+.full-icon {
   border: 1px solid rgb(0 0 0 / 10%);
 
   &.color_by_class {
     color: mediumpurple;
   }
+}
+
+.base-icon,
+.full-icon {
+  height: 24px;
+  width: 24px;
+  font-size: 24px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
