--- a/apps/doc/src/app/components/icons/base/icons.component.less
+++ b/apps/doc/src/app/components/icons/base/icons.component.less
@@ -10,7 +10,6 @@ h4 {
 .icons {
   display: flex;
   flex-wrap: wrap;
-  color: var(--prizm-status-info-primary-default);
 }
 
 .icon-def {
@@ -52,11 +51,41 @@ h4 {
 }
 
 prizm-icons,
-prizm-icons-full {
+prizm-icons-full,
+.base-icon,
+.full-icon {
   border: 1px solid rgb(0 0 0 / 10%);
 }
 
-.both-size {
+.header {
   display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 8px 0;
+  margin-top: 16px;
+  padding: 4px;
+  gap: 8px;
+}
+
+.icons {
+  &.colored {
+    color: var(--prizm-index-plan);
+  }
+}
+
+.both-size {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
+  font-size: 24px;
   gap: 0.5rem;
+
+  .base-icon,
+  .full-icon {
+    height: 24px;
+    width: 24px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
 }
