--- a/apps/doc/src/app/components/icons/base/examples/base/icons-base-example.component.html
+++ b/apps/doc/src/app/components/icons/base/examples/base/icons-base-example.component.html
@@ -2,10 +2,10 @@
   <h4>SVG: Base size</h4>
 
   <div style="display: flex; gap: 8px">
-    <prizm-icons [size]="30" [color]="'green'" name="arrow_up"></prizm-icons>
-    <prizm-icons [color]="'var(--prizm-index-plan)'" [size]="30" name="arrows_cross"></prizm-icons>
+    <prizm-icons [size]="30" [color]="'green'" name="arrow-up"></prizm-icons>
+    <prizm-icons [color]="'var(--prizm-index-plan)'" [size]="30" name="arrows-cross"></prizm-icons>
     <prizm-icons class="color_by_class" [size]="30" name="bag"></prizm-icons>
-    <prizm-icons [size]="30" name="bubble_message"></prizm-icons>
+    <prizm-icons [size]="30" name="bubble-message"></prizm-icons>
   </div>
 </div>
 
@@ -13,10 +13,10 @@
   <h4>SVG: Full size</h4>
 
   <div style="display: flex; gap: 8px">
-    <prizm-icons-full [size]="30" [color]="'green'" name="arrow_up"></prizm-icons-full>
-    <prizm-icons-full [color]="'var(--prizm-index-plan)'" [size]="30" name="arrows_cross"></prizm-icons-full>
+    <prizm-icons-full [size]="30" [color]="'green'" name="arrow-up"></prizm-icons-full>
+    <prizm-icons-full [color]="'var(--prizm-index-plan)'" [size]="30" name="arrows-cross"></prizm-icons-full>
     <prizm-icons-full class="color_by_class" [size]="30" name="bag"></prizm-icons-full>
-    <prizm-icons-full [size]="30" name="bubble_message"></prizm-icons-full>
+    <prizm-icons-full [size]="30" name="bubble-message"></prizm-icons-full>
   </div>
 </div>
 
@@ -24,14 +24,14 @@
   <h4>Font: Base size</h4>
 
   <div style="display: flex; gap: 8px">
-    <i class="base-icon prizm-base-icons-{{'arrow_up' }}" style="color: green"> </i>
+    <i class="base-icon prizm-base-icons-{{'arrow-up' }}" style="color: green"> </i>
     <i
-      class="base-icon prizm-base-icons-{{'arrows_cross' }}"
+      class="base-icon prizm-base-icons-{{'arrows-cross' }}"
       style="color: var(--prizm-index-plan)"
     >
     </i>
     <i class="color_by_class base-icon prizm-base-icons-bag"> </i>
-    <i class="base-icon prizm-base-icons-{{ 'bubble_message' }}"> </i>
+    <i class="base-icon prizm-base-icons-{{ 'bubble-message' }}"> </i>
   </div>
 </div>
 
@@ -39,16 +39,16 @@
   <h4>Font: Full size</h4>
 
   <div style="display: flex; gap: 8px">
-    <i class="base-icon prizm-full-icons-{{ 'arrow_up' }}" style="color: green"> </i>
+    <i class="base-icon prizm-full-icons-{{ 'arrow-up' }}" style="color: green"> </i>
 
     <i
-      class="base-icon prizm-full-icons-{{ 'arrows_cross' }}"
+      class="base-icon prizm-full-icons-{{ 'arrows-cross' }}"
       style="color: var(--prizm-index-plan)"
     >
     </i>
 
     <i class="color_by_class base-icon prizm-full-icons-bag"> </i>
 
-    <i class="base-icon prizm-full-icons-{{ 'bubble_message' }}"> </i>
+    <i class="base-icon prizm-full-icons-{{ 'bubble-message' }}"> </i>
   </div>
 </div>
