fix: custom error message is not displayed in input layout date time #185

--- a/apps/doc/src/app/components/dialogs/dialog/examples/with-parent/dialog-with-parent-example.component.html
+++ b/apps/doc/src/app/components/dialogs/dialog/examples/with-parent/dialog-with-parent-example.component.html
@@ -15,7 +15,7 @@
   <h4>Check Dropdown Host Parent Container And Position</h4>
   <prizm-input-layout label="Validators">
     <prizm-input-select #input [formControl]="control" [items]="items"> </prizm-input-select>
-    <ng-template [control]="input" prizmInputStatusText>dddd</ng-template>
+    <ng-template [control]="input" prizmInputStatusText></ng-template>
   </prizm-input-layout>
 </ng-template>
 
