--- a/apps/doc/src/app/components/input/input-mask/input-mask-example.component.html
+++ b/apps/doc/src/app/components/input/input-mask/input-mask-example.component.html
@@ -30,7 +30,7 @@
           prizmDocHostElementKey="PrizmInputText"
           prizmInput
         />
-        <ng-template prizmInputStatusText>Текст статуса</ng-template>
+        <ng-template [control]="input" prizmInputStatusText></ng-template>
       </prizm-input-layout>
     </prizm-doc-demo>
 
