--- a/apps/doc/src/app/components/input/input-password/input-password-example.component.html
+++ b/apps/doc/src/app/components/input/input-password/input-password-example.component.html
@@ -27,7 +27,7 @@
           prizmDocHostElementKey="inputPasswordAuxiliaryControl"
           prizm-input-right
         ></prizm-input-password-auxiliary-control>
-        <ng-template prizmInputStatusText>Текст статуса</ng-template>
+        <ng-template [control]="inputPas" prizmInputStatusText></ng-template>
       </prizm-input-layout>
     </prizm-doc-demo>
 
