fix: input select examples prizm input status text fix #185

--- a/apps/doc/src/app/components/input/input-select/examples/virtual-scroll/select-virtual-scroll-example.component.html
+++ b/apps/doc/src/app/components/input/input-select/examples/virtual-scroll/select-virtual-scroll-example.component.html
@@ -9,7 +9,7 @@
     </prizm-scrollbar>
   </prizm-input-select>
 
-  <ng-template [control]="$any(input)" prizmInputStatusText>dddd</ng-template>
+  <ng-template [control]="input" prizmInputStatusText></ng-template>
 </prizm-input-layout>
 <br />
 <br />
