--- a/apps/doc/src/app/components/input/input-select/examples/base/select-base-example.component.html
+++ b/apps/doc/src/app/components/input/input-select/examples/base/select-base-example.component.html
@@ -1,12 +1,6 @@
 <prizm-input-layout label="Validators">
   <prizm-input-select #input [formControl]="control" [items]="items"></prizm-input-select>
-  <!--  <ng-template [control]="input" prizmInputStatusText></ng-template>-->
-  <!--  <prizm-input-status-subtext [control]="input" prizm-input-subtext></prizm-input-status-subtext>-->
-  <!--  <ng-template prizmInputStatusText>{{-->
-  <!--    'ErrorRequired'-->
-  <!--    }}</ng-template>-->
-
-  <ng-template [control]="$any(input)" prizmInputStatusText>dddd</ng-template>
+  <ng-template [control]="input" prizmInputStatusText></ng-template>
 </prizm-input-layout>
 <br />
 <br />
