fix: switcher active disable state regress fixed #1348

--- a/libs/components/src/lib/components/switcher/components/switcher-item/switcher-item.component.html
+++ b/libs/components/src/lib/components/switcher/components/switcher-item/switcher-item.component.html
@@ -6,6 +6,7 @@
   [size]="size"
   [appearanceType]="data?.appearanceType ?? 'ghost'"
   [appearance]="data?.appearance ?? 'secondary'"
+  [class.switcher_active_disabled]="isActive && isDisabled"
   [pseudoPressed]="isActive"
   prizmButton
 >
