--- a/libs/components/src/lib/components/switcher/components/switcher-item/switcher-item.component.less
+++ b/libs/components/src/lib/components/switcher/components/switcher-item/switcher-item.component.less
@@ -49,6 +49,11 @@
     transition: 400ms;
     overflow: hidden;
 
+    &_active_disabled {
+      background: var(--prizm-v3-button-secondary-ghost-active);
+      color: var(--prizm-v3-button-secondary-solid-active);
+    }
+
     &_icon {
       min-width: 50px;
     }
