fix: navigation menu active item setter fix #1213

--- a/apps/doc/src/app/components/navigation-menu/examples/navigation-menu-basic-example/navigation-menu-basic-example.component.html
+++ b/apps/doc/src/app/components/navigation-menu/examples/navigation-menu-basic-example/navigation-menu-basic-example.component.html
@@ -4,6 +4,7 @@
       [title]="'Basic props'"
       [toolbarConfig]="toolbarConfig"
       [items]="items"
+      [activeItem]="items[0]"
       [emptyDataMessageConfig]="{
         title: 'Нет никаких данных',
         subtitle:
