fix: breadcrumbs force update for content projection use case #1282

--- a/apps/doc/src/app/components/breadcrumbs/examples/breadcrumbs-projection-basic/breadcrumbs-example-projection.component.html
+++ b/apps/doc/src/app/components/breadcrumbs/examples/breadcrumbs-projection-basic/breadcrumbs-example-projection.component.html
@@ -1,5 +1,5 @@
-<prizm-breadcrumbs>
-  <ng-container *ngFor="let item of breadcrumbs">
+<prizm-breadcrumbs #crumbs>
+  <ng-container *ngFor="let item of breadcrumbs$ | async">
     <a *prizmBreadcrumb [routerLink]="item.link">
       {{ item.name }}
     </a>
