fix: navigation active node styles changed #1213

--- a/apps/doc/src/app/components/navigation-menu/examples/navigation-menu-basic-example/navigation-menu-basic-example.component.html
+++ b/apps/doc/src/app/components/navigation-menu/examples/navigation-menu-basic-example/navigation-menu-basic-example.component.html
@@ -4,7 +4,7 @@
       [title]="'Basic props'"
       [toolbarConfig]="toolbarConfig"
       [items]="items"
-      [activeItem]="items[0]"
+      [activeItem]="activeItem"
       [emptyDataMessageConfig]="{
         title: 'Нет никаких данных',
         subtitle:
