--- a/libs/components/src/lib/components/navigation-menu/components/prizm-navigation-menu-item/prizm-navigation-menu-item.component.html
+++ b/libs/components/src/lib/components/navigation-menu/components/prizm-navigation-menu-item/prizm-navigation-menu-item.component.html
@@ -1,5 +1,6 @@
 <div
   class="prizm-navigation-menu-item"
+  [class.prizm-navigation-menu-item_active_node]="isActiveNode"
   [class.prizm-navigation-menu-item_active]="isActive"
   [class.prizm-navigation-menu-item_hovered]="isHovered"
   [class.prizm-navigation-menu-item_expandable]="isExpandable"
