--- a/libs/components/src/lib/components/navigation-menu/components/prizm-navigation-menu-items/prizm-navigation-menu-items.component.html
+++ b/libs/components/src/lib/components/navigation-menu/components/prizm-navigation-menu-items/prizm-navigation-menu-items.component.html
@@ -13,6 +13,7 @@
       [item]="item"
       [mode]="mode"
       [itemExtraTemplate]="itemExtraTemplate"
+      [isActiveNode]="getItemIsActiveNode(item)"
       [isActive]="getItemIsActive(item)"
       [isExpandable]="menuItemsChildrenHandler(item).length > 0"
       [isExpanded]="getItemIsExpanded(item)"
