--- a/libs/components/src/lib/components/navigation-menu/components/prizm-navigation-menu-item/prizm-navigation-menu-item.component.less
+++ b/libs/components/src/lib/components/navigation-menu/components/prizm-navigation-menu-item/prizm-navigation-menu-item.component.less
@@ -24,8 +24,11 @@
     background: var(--prizm-v3-table-fill-row-hover);
   }
 
-  &_active {
+  &_active_node {
     background: var(--prizm-v3-table-fill-row-active);
+  }
+
+  &_active {
     border-left-color: var(
       --prizm-navigation-active-row-marker-color,
       var(--prizm-v3-status-info-primary-default)
