fix: style fixes

--- a/apps/doc/src/app/components/breadcrumbs/examples/breadcrumbs-projection-basic/breadcrumbs-example-projection.component.html
+++ b/apps/doc/src/app/components/breadcrumbs/examples/breadcrumbs-projection-basic/breadcrumbs-example-projection.component.html
@@ -1,4 +1,4 @@
-<prizm-breadcrumbs #crumbs>
+<prizm-breadcrumbs>
   <ng-container *ngFor="let item of breadcrumbs$ | async">
     <a *prizmBreadcrumb [routerLink]="item.link">
       {{ item.name }}
