--- a/libs/components/src/lib/components/input/input-number/input-number-auxiliary-controls.component.less
+++ b/libs/components/src/lib/components/input/input-number/input-number-auxiliary-controls.component.less
@@ -1,6 +1,14 @@
+:host {
+  height: 100%;
+}
 .container {
   display: flex;
   flex-direction: column;
+  height: 100%;
+
+  [prizmInputIconButton] {
+    height: 50%;
+  }
 }
 
 :host-context(.prizm-input-form-outer[data-size='m']) {
