--- a/libs/components/src/lib/components/tabs/components/tab.component.html
+++ b/libs/components/src/lib/components/tabs/components/tab.component.html
@@ -6,7 +6,8 @@
 >
   <div class="page__icon" *ngIf="icon">
     <ng-container *polymorphOutlet="icon; context: $any({ idx: idx$ | async, tab: this })">
-      <prizm-icon class="icon icon__mark" [size]="16" [iconClass]="$any(icon)"> </prizm-icon>
+      <!--      <prizm-icon class="icon icon__mark" [size]="16" [iconClass]="$any(icon)"> </prizm-icon>-->
+      <prizm-icons-full class="icon icon__mark" [size]="16" [name]="$any(icon)"> </prizm-icons-full>
     </ng-container>
   </div>
   <span class="page__title" *ngIf="content">
@@ -22,7 +23,8 @@
   ></prizm-counter>
   <div class="page__cancel" *ngIf="closable && !disabled" (click)="onClose($event)">
     <ng-container *polymorphOutlet="closeIcon; context: $any({ idx: idx$ | async, tab: this })">
-      <prizm-icon class="icon" [iconClass]="$any(closeIcon)" [size]="16"></prizm-icon>
+      <!--      <prizm-icon class="icon" [iconClass]="$any(closeIcon)" [size]="16"></prizm-icon>-->
+      <prizm-icons-full class="icon" [name]="$any(closeIcon)" [size]="16"></prizm-icons-full>
     </ng-container>
   </div>
 </button>
