feat(components/button): replaced icon component

--- a/apps/doc/src/app/components/buttons/icon-button/examples/your-icon-set/icons-your-icon-set-example.component.html
+++ b/apps/doc/src/app/components/buttons/icon-button/examples/your-icon-set/icons-your-icon-set-example.component.html
@@ -166,5 +166,5 @@
 </div>
 
 <ng-template #ourIconTemplate>
-  <prizm-icons-svg [size]="24" [name]="PrizmIconSvgEnum.PRODUCTION_INDUSTRY_SNAKE_CUP"></prizm-icons-svg>
+  <prizm-icons [size]="24" [name]="'agenda-fill'"></prizm-icons>
 </ng-template>
