--- a/apps/doc/src/app/components/buttons/split-button/examples/split/split-buttons-example.component.html
+++ b/apps/doc/src/app/components/buttons/split-button/examples/split/split-buttons-example.component.html
@@ -3,23 +3,23 @@
 <div class="box">
   <div class="title">Fill split button</div>
   <div class="content">
-    <prizm-split-button [icon]="'chevrons-dropdown'" appearanceType="fill" appearance="primary" size="m"
+    <prizm-split-button [icon]="'triangle-down'" appearanceType="fill" appearance="primary" size="m"
       >Split Button</prizm-split-button
     >
-    <prizm-split-button [icon]="'chevrons-dropdown'" appearanceType="fill" appearance="secondary" size="m"
+    <prizm-split-button [icon]="'triangle-down'" appearanceType="fill" appearance="secondary" size="m"
       >Split Button</prizm-split-button
     >
-    <prizm-split-button [icon]="'chevrons-dropdown'" appearanceType="fill" appearance="success" size="m"
+    <prizm-split-button [icon]="'triangle-down'" appearanceType="fill" appearance="success" size="m"
       >Split Button</prizm-split-button
     >
-    <prizm-split-button [icon]="'chevrons-dropdown'" appearanceType="fill" appearance="warning" size="m"
+    <prizm-split-button [icon]="'triangle-down'" appearanceType="fill" appearance="warning" size="m"
       >Split Button</prizm-split-button
     >
-    <prizm-split-button [icon]="'chevrons-dropdown'" appearanceType="fill" appearance="danger" size="m"
+    <prizm-split-button [icon]="'triangle-down'" appearanceType="fill" appearance="danger" size="m"
       >Split Button</prizm-split-button
     >
     <prizm-split-button
-      [icon]="'chevrons-dropdown'"
+      [icon]="'triangle-down'"
       [disabled]="true"
       appearanceType="fill"
       appearance="danger"
@@ -27,7 +27,7 @@
       >Split Button</prizm-split-button
     >
     <prizm-split-button
-      [icon]="'chevrons-dropdown'"
+      [icon]="'triangle-down'"
       [showLoader]="true"
       appearanceType="fill"
       appearance="danger"
@@ -40,23 +40,23 @@
 <div class="box">
   <div class="title">Ghost split button</div>
   <div class="content">
-    <prizm-split-button [icon]="'chevrons-dropdown'" appearanceType="ghost" appearance="primary" size="m"
+    <prizm-split-button [icon]="'triangle-down'" appearanceType="ghost" appearance="primary" size="m"
       >Split Button</prizm-split-button
     >
-    <prizm-split-button [icon]="'chevrons-dropdown'" appearanceType="ghost" appearance="secondary" size="m"
+    <prizm-split-button [icon]="'triangle-down'" appearanceType="ghost" appearance="secondary" size="m"
       >Split Button</prizm-split-button
     >
-    <prizm-split-button [icon]="'chevrons-dropdown'" appearanceType="ghost" appearance="success" size="m"
+    <prizm-split-button [icon]="'triangle-down'" appearanceType="ghost" appearance="success" size="m"
       >Split Button</prizm-split-button
     >
-    <prizm-split-button [icon]="'chevrons-dropdown'" appearanceType="ghost" appearance="warning" size="m"
+    <prizm-split-button [icon]="'triangle-down'" appearanceType="ghost" appearance="warning" size="m"
       >Split Button</prizm-split-button
     >
-    <prizm-split-button [icon]="'chevrons-dropdown'" appearanceType="ghost" appearance="danger" size="m"
+    <prizm-split-button [icon]="'triangle-down'" appearanceType="ghost" appearance="danger" size="m"
       >Split Button</prizm-split-button
     >
     <prizm-split-button
-      [icon]="'chevrons-dropdown'"
+      [icon]="'triangle-down'"
       [disabled]="true"
       appearanceType="ghost"
       appearance="danger"
@@ -64,7 +64,7 @@
       >Split Button</prizm-split-button
     >
     <prizm-split-button
-      [icon]="'chevrons-dropdown'"
+      [icon]="'triangle-down'"
       [showLoader]="true"
       appearanceType="ghost"
       appearance="danger"
@@ -77,23 +77,23 @@
 <div class="box">
   <div class="title">Outline split button</div>
   <div class="content">
-    <prizm-split-button [icon]="'chevrons-dropdown'" appearanceType="outline" appearance="primary" size="m"
+    <prizm-split-button [icon]="'triangle-down'" appearanceType="outline" appearance="primary" size="m"
       >Split Button</prizm-split-button
     >
-    <prizm-split-button [icon]="'chevrons-dropdown'" appearanceType="outline" appearance="secondary" size="m"
+    <prizm-split-button [icon]="'triangle-down'" appearanceType="outline" appearance="secondary" size="m"
       >Split Button</prizm-split-button
     >
-    <prizm-split-button [icon]="'chevrons-dropdown'" appearanceType="outline" appearance="success" size="m"
+    <prizm-split-button [icon]="'triangle-down'" appearanceType="outline" appearance="success" size="m"
       >Split Button</prizm-split-button
     >
-    <prizm-split-button [icon]="'chevrons-dropdown'" appearanceType="outline" appearance="warning" size="m"
+    <prizm-split-button [icon]="'triangle-down'" appearanceType="outline" appearance="warning" size="m"
       >Split Button</prizm-split-button
     >
-    <prizm-split-button [icon]="'chevrons-dropdown'" appearanceType="outline" appearance="danger" size="m"
+    <prizm-split-button [icon]="'triangle-down'" appearanceType="outline" appearance="danger" size="m"
       >Split Button</prizm-split-button
     >
     <prizm-split-button
-      [icon]="'chevrons-dropdown'"
+      [icon]="'triangle-down'"
       [disabled]="true"
       appearanceType="outline"
       appearance="danger"
@@ -101,7 +101,7 @@
       >Split Button</prizm-split-button
     >
     <prizm-split-button
-      [icon]="'chevrons-dropdown'"
+      [icon]="'triangle-down'"
       [showLoader]="true"
       appearanceType="outline"
       appearance="danger"
