--- a/apps/doc/src/app/components/buttons/split-button/examples/with-dropdown/split-buttons-with-dropdown-example.component.html
+++ b/apps/doc/src/app/components/buttons/split-button/examples/with-dropdown/split-buttons-with-dropdown-example.component.html
@@ -1,7 +1,7 @@
 <div class="box">
   <prizm-dropdown-host [(isOpen)]="open" [content]="dropdown" prizmDropdownHostWidth="100%">
     <prizm-split-button
-      [icon]="'chevrons-dropdown'"
+      [icon]="'triangle-down'"
       (clickIcon)="open = !open"
       appearanceType="fill"
       appearance="primary"
