--- a/libs/components/src/lib/components/button/button.component.html
+++ b/libs/components/src/lib/components/button/button.component.html
@@ -26,6 +26,7 @@
 
 <ng-template #showIconTemp let-icon="icon">
   <ng-container *polymorphOutlet="icon as content; context: { size: size }">
-    <prizm-icon [iconClass]="content" [size]="16"></prizm-icon>
+    <!--    <prizm-icon [iconClass]="content" [size]="16"></prizm-icon>-->
+    <prizm-icons-full [name]="content" [size]="16"></prizm-icons-full>
   </ng-container>
 </ng-template>
