--- a/apps/doc/src/app/components/buttons/icon-button/examples/icons/icons-buttons-example.component.html
+++ b/apps/doc/src/app/components/buttons/icon-button/examples/icons/icons-buttons-example.component.html
@@ -3,55 +3,19 @@
 <div class="box">
   <div class="title">Fill button[prizmIconButton]</div>
   <div class="content">
+    <button [icon]="'user-card'" prizmIconButton appearanceType="fill" appearance="primary" size="m"></button>
     <button
-      [icon]="'account-card-details'"
-      prizmIconButton
-      appearanceType="fill"
-      appearance="primary"
-      size="m"
-    ></button>
-    <button
-      [icon]="'account-card-details'"
+      [icon]="'user-card'"
       prizmIconButton
       appearanceType="fill"
       appearance="secondary"
       size="m"
     ></button>
-    <button
-      [icon]="'account-card-details'"
-      prizmIconButton
-      appearanceType="fill"
-      appearance="success"
-      size="m"
-    ></button>
-    <button
-      [icon]="'account-card-details'"
-      prizmIconButton
-      appearanceType="fill"
-      appearance="warning"
-      size="m"
-    ></button>
-    <button
-      [icon]="'account-card-details'"
-      prizmIconButton
-      appearanceType="fill"
-      appearance="danger"
-      size="m"
-    ></button>
-    <button
-      [icon]="'account-card-details'"
-      [disabled]="true"
-      prizmIconButton
-      appearanceType="fill"
-      size="m"
-    ></button>
-    <button
-      [icon]="'account-card-details'"
-      [showLoader]="true"
-      prizmIconButton
-      appearanceType="fill"
-      size="m"
-    ></button>
+    <button [icon]="'user-card'" prizmIconButton appearanceType="fill" appearance="success" size="m"></button>
+    <button [icon]="'user-card'" prizmIconButton appearanceType="fill" appearance="warning" size="m"></button>
+    <button [icon]="'user-card'" prizmIconButton appearanceType="fill" appearance="danger" size="m"></button>
+    <button [icon]="'user-card'" [disabled]="true" prizmIconButton appearanceType="fill" size="m"></button>
+    <button [icon]="'user-card'" [showLoader]="true" prizmIconButton appearanceType="fill" size="m"></button>
   </div>
 </div>
 
@@ -59,54 +23,36 @@
   <div class="title">Ghost button[prizmIconButton]</div>
   <div class="content">
     <button
-      [icon]="'account-card-details'"
+      [icon]="'user-card'"
       prizmIconButton
       appearanceType="ghost"
       appearance="primary"
       size="m"
     ></button>
     <button
-      [icon]="'account-card-details'"
+      [icon]="'user-card'"
       prizmIconButton
       appearanceType="ghost"
       appearance="secondary"
       size="m"
     ></button>
     <button
-      [icon]="'account-card-details'"
+      [icon]="'user-card'"
       prizmIconButton
       appearanceType="ghost"
       appearance="success"
       size="m"
     ></button>
     <button
-      [icon]="'account-card-details'"
+      [icon]="'user-card'"
       prizmIconButton
       appearanceType="ghost"
       appearance="warning"
       size="m"
     ></button>
-    <button
-      [icon]="'account-card-details'"
-      prizmIconButton
-      appearanceType="ghost"
-      appearance="danger"
-      size="m"
-    ></button>
-    <button
-      [icon]="'account-card-details'"
-      [disabled]="true"
-      prizmIconButton
-      appearanceType="ghost"
-      size="m"
-    ></button>
-    <button
-      [icon]="'account-card-details'"
-      [showLoader]="true"
-      prizmIconButton
-      appearanceType="ghost"
-      size="m"
-    ></button>
+    <button [icon]="'user-card'" prizmIconButton appearanceType="ghost" appearance="danger" size="m"></button>
+    <button [icon]="'user-card'" [disabled]="true" prizmIconButton appearanceType="ghost" size="m"></button>
+    <button [icon]="'user-card'" [showLoader]="true" prizmIconButton appearanceType="ghost" size="m"></button>
   </div>
 </div>
 
@@ -114,49 +60,43 @@
   <div class="title">Outline button[prizmIconButton]</div>
   <div class="content">
     <button
-      [icon]="'account-card-details'"
+      [icon]="'user-card'"
       prizmIconButton
       appearanceType="outline"
       appearance="primary"
       size="m"
     ></button>
     <button
-      [icon]="'account-card-details'"
+      [icon]="'user-card'"
       prizmIconButton
       appearanceType="outline"
       appearance="secondary"
       size="m"
     ></button>
     <button
-      [icon]="'account-card-details'"
+      [icon]="'user-card'"
       prizmIconButton
       appearanceType="outline"
       appearance="success"
       size="m"
     ></button>
     <button
-      [icon]="'account-card-details'"
+      [icon]="'user-card'"
       prizmIconButton
       appearanceType="outline"
       appearance="warning"
       size="m"
     ></button>
     <button
-      [icon]="'account-card-details'"
+      [icon]="'user-card'"
       prizmIconButton
       appearanceType="outline"
       appearance="danger"
       size="m"
     ></button>
+    <button [icon]="'user-card'" [disabled]="true" prizmIconButton appearanceType="outline" size="m"></button>
     <button
-      [icon]="'account-card-details'"
-      [disabled]="true"
-      prizmIconButton
-      appearanceType="outline"
-      size="m"
-    ></button>
-    <button
-      [icon]="'account-card-details'"
+      [icon]="'user-card'"
       [showLoader]="true"
       prizmIconButton
       appearanceType="outline"
