feat(components/calendar-range): replaced icon component

--- a/libs/components/src/lib/components/internal/primitive-spin-button/primitive-spin-button.template.html
+++ b/libs/components/src/lib/components/internal/primitive-spin-button/primitive-spin-button.template.html
@@ -16,7 +16,7 @@
     size="l"
     [appearanceType]="mode"
     automation-id="prizm-primitive-spin-button__left"
-    icon="arrows-chevron-left"
+    icon="angle-left"
     appearance="secondary"
     [class.z-arrow_hidden]="leftComputedDisabled"
     [title]="texts[0]"
@@ -33,7 +33,7 @@
     size="l"
     appearance="secondary"
     automation-id="prizm-primitive-spin-button__right"
-    icon="arrows-chevron-right"
+    icon="angle-right"
     [appearanceType]="mode"
     [class.z-arrow_hidden]="rightComputedDisabled"
     [title]="texts[1]"
