feat(components/column-settings): replaced icon component

--- a/apps/doc/src/app/components/table/examples/table-column-settings-example/table-column-settings-example.component.html
+++ b/apps/doc/src/app/components/table/examples/table-column-settings-example/table-column-settings-example.component.html
@@ -153,7 +153,7 @@
 <ng-template #iconBtnTemplate>
   <prizm-dropdown-host [(isOpen)]="showColumnSettings" [content]="dropdown" prizmDropdownHostWidth="auto">
     <button
-      [icon]="'settings'"
+      [icon]="'gear-8-edge'"
       (click)="toggleColumnSettings()"
       prizmIconButton
       appearanceType="ghost"
