--- a/libs/components/src/lib/components/column-settings/components/column-drop-list/column-drop-list.component.html
+++ b/libs/components/src/lib/components/column-settings/components/column-drop-list/column-drop-list.component.html
@@ -7,7 +7,8 @@
       prizmTheme
     >
       <ng-container leftBox>
-        <prizm-icon [size]="24" iconClass="editor-dots"></prizm-icon>
+        <!--        <prizm-icon [size]="24" iconClass="editor-dots"></prizm-icon>-->
+        <prizm-icons [size]="24" name="grip-dots-vertical"></prizm-icons>
       </ng-container>
       <span>{{ column.name }}</span>
       <ng-container rightBox>
