--- a/libs/components/src/lib/components/dropdowns/multi-select/input-multi-select.component.html
+++ b/libs/components/src/lib/components/dropdowns/multi-select/input-multi-select.component.html
@@ -102,15 +102,24 @@
       context: $any({ opened: opened$ | async, disabled: disabled })
     "
   >
-    <prizm-icon
+    <!--    <prizm-icon-->
+    <!--      [class.opened]="opened$ | async"-->
+    <!--      [class.active]="(focused$ | async) || (opened$ | async)"-->
+    <!--      [class.icon-dropdown]="iconName === defaultIcon"-->
+    <!--      [iconClass]="$any(iconName)"-->
+    <!--      [class.disabled]="disabled"-->
+    <!--      (click)="safeOpenModal()"-->
+    <!--    >-->
+    <!--    </prizm-icon>-->
+    <prizm-icons-full
       [class.opened]="opened$ | async"
       [class.active]="(focused$ | async) || (opened$ | async)"
       [class.icon-dropdown]="iconName === defaultIcon"
-      [iconClass]="$any(iconName)"
+      [name]="$any(iconName)"
       [class.disabled]="disabled"
       (click)="safeOpenModal()"
     >
-    </prizm-icon>
+    </prizm-icons-full>
   </ng-container>
 </ng-container>
 
